--- a/locales/en.yml
+++ b/locales/en.yml
@@ -14,7 +14,7 @@
       name: "Your Name"
       submit: "Submit"
     navigation:
-      about: "About us"
+      about: "About"
       bands: "Bands"
       breweries: "Breweries"
       contact: "Contact"
