--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -31,8 +31,22 @@
     sections:
       bands:
         title: "Bands"
+        more: "Meer bands to be announced!"
+        electric-hollers:
+          text: |
+            Electric Hollers staat voor een nieuwe generatie blues en rock artiesten uit Noord-Nederland. Maak je klaar om weggeblazen te worden door een muur van vintage sound en energie! Zware bastonen, donderende drums en gitaarsolo’s die je meeslepen naar vervlogen tijden. De band laat zich inspireren door bands als Led Zeppelin, Santana & Ten Years After en bracht in 2018 hun eerste plaat ‘Rise’ uit.
       breweries:
         title: "Brouwerijen"
+        more: "Meer brouwerijen to be announced!"
+        stanislaus:
+          text: |
+             'Because nothing epic happens drinking water'. Deze bier-evangelisten uit Enschede zijn op een missie om goed craft bier te verspreiden.
+        berging:
+          text: |
+            Ongecompliceerd en toch bijzonder. Berging zet in op traditionele smaken opnieuw uitvinden en duurzame recepten ontwikkelen.
+        klein-duimpje:
+          text: |
+            Meer dan 20 jaar brouw ervaring en meer dan 20 biertje op hun naam is ‘klein duimpje’ zeker geen kleine in het craft-beer-land.
       contact:
         title: "Contact"
       extra-info:
