Fixup 404 and thanks without nav

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -24,13 +24,15 @@
     pages:
       x404:
         title: "404 - Page Not Found"
+        home: "To homepage"
       index:
         banner:
           title: "Welcome to HOP! Into the Grain 2019"
           date: "May 25th 2019, 15.00-23.00"
           location: "EM2, Suikerlaan 6, 7943 DA, Groningen"
       thanks:
-        title: "Thanks!"
+        title: "Thanks for your message!"
+        home: "Back to home"
     sections:
       bands:
         title: "Bands"
