--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -53,8 +53,8 @@
         title: "Contact"
       extra-info:
         title: "Extra info"
-        line-1: "Munten €2,50 per stuk voor 20 cl."
-        line-2: "GRATIS bierglas"
+        line-1: "Munten €2,50 per stuk, voor 15 cl."
+        line-2: "Je krijgt een bierglas bij entree, wil je hem mee naar huis? = 1 muntje"
         line-3: "GRATIS eerste biertje"
       social:
         title: "Volg ons:"
