--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -37,6 +37,9 @@
         electric-hollers:
           text: |
             Electric Hollers staat voor een nieuwe generatie blues en rock artiesten uit Noord-Nederland. Maak je klaar om weggeblazen te worden door een muur van vintage sound en energie! Zware bastonen, donderende drums en gitaarsolo’s die je meeslepen naar vervlogen tijden. De band laat zich inspireren door bands als Led Zeppelin, Santana & Ten Years After en bracht in 2018 hun eerste plaat ‘Rise’ uit.
+        volt:
+          text: |
+            Blues and Beer, a poor man’s remedy. Begrijp ons niet verkeerd, dit moet vooral een vrolijke dag en avond worden, maar een beetje blues is nooit ver weg met een goeie pint in de hand. Het leven is immers een lach en een traan. En luistert er iets beters weg dan een fijne Chicago Blues band? Klassiekers en eigen werk passeren de revu. 
       breweries:
         title: "Brouwerijen"
         more: "Meer brouwerijen to be announced!"
