--- a/locales/en.yml
+++ b/locales/en.yml
@@ -40,6 +40,9 @@
         electric-hollers:
           text: |
             Electric Hollers stands for a new generation of blues and rock artists from northern Netherlands. Get ready to be blown away by a wall of vintage sound and energy! Heavy bass tones, thundering drums and guitar solos that drag you through past times. The band is inspired by Led Zeppelin, Santana & Ten Years After and released their first album "Rise" in 2018.
+        volt:
+          text: |
+            Blues and Beer, a poor man's remedy. Don't get us wrong, this should be a happy day and evening, but a bit of blues is never far away with a good pint in hand. After all, life is a smile and a tear. And is there anything better than a great Chicago Blues band? 10.000 Volt will play classics and own work.
       breweries:
         title: "Breweries"
         more: "More breweries to be announced!"
