--- a/locales/en.yml
+++ b/locales/en.yml
@@ -58,6 +58,9 @@
         nevel:
           text: |
             Nevel focuses entirely on beers with mixed and wild yeasts. The wild yeasts ensure that the beer becomes refreshing, dry and complex. Nevel brews as much as possible with organic and unprocessed ingredients from their home-town Nijmegen.
+        doggerland:
+          text: |
+            Doggerland Craft Cider wants to bridge the gap between English cider culture and the surplus of the apple harvest in and around Groningen. They now have 4 ciders in production, each with a pure and quirky taste.
       contact:
         title: "Contact"
       extra-info:
