--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -55,6 +55,9 @@
         nevel:
           text: |
             Als enige brouwerij in Nederland legt Nevel zich volledig toe op bieren met gemengde en wilde gisten. De wilde gisten zorgen ervoor dat het bier verfrissend, droog en complex wordt. Ze brouwen zoveel mogelijk met biologische en onbewerkte ingrediënten uit de omgeving van hun home-town Nijmegen.
+        doggerland:
+          text: |
+            Doggerland Craft Cider wil een brug slaan tussen de Engelse cidercultuur en het overschot van de appeloogst in en rondom Groningen.  Ze hebben inmiddels 4  ciders in productie, elk met een pure en eigenzinnige smaak.
       contact:
         title: "Contact"
       extra-info:
