--- a/locales/en.yml
+++ b/locales/en.yml
@@ -61,6 +61,9 @@
         doggerland:
           text: |
             Doggerland Craft Cider wants to bridge the gap between English cider culture and the surplus of the apple harvest in and around Groningen. They now have 4 ciders in production, each with a pure and quirky taste.
+        vandestreek:
+          text: |
+            The brewing brothers of VandeStreek do not shy away from new tastes and techniques. They now have a core range of 7 beers, supplemented with a special release each month, collaborations with other hop fanatics and barrel bged beers from their fast-growing barrel room.
       contact:
         title: "Contact"
       extra-info:
