--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -58,6 +58,9 @@
         doggerland:
           text: |
             Doggerland Craft Cider wil een brug slaan tussen de Engelse cidercultuur en het overschot van de appeloogst in en rondom Groningen.  Ze hebben inmiddels 4  ciders in productie, elk met een pure en eigenzinnige smaak.
+        vandestreek:
+          text: |
+            De brouwende broers van VandeStreek schuwen nieuwe smaken en technieken niet. Inmiddels hebben ze 7 vaste bieren, aangevuld met elke maand een speciaal-speciaalbiertje, collaborations met andere hop-fanatici en barrel bged bieren uit hun snel groeiende barrel room.
       contact:
         title: "Contact"
       extra-info:
