Add KAIJU, Moon Dog and Frontaal

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -64,6 +64,15 @@
         vandestreek:
           text: |
             The brewing brothers of VandeStreek do not shy away from new tastes and techniques. They now have a core range of 7 beers, supplemented with a special release each month, collaborations with other hop fanatics and barrel bged beers from their fast-growing barrel room.
+        kaiju:
+          text: |
+            In 2013 Kaiju took the stage by storm and immediately won a medal for a double IPA. Their list of awards is now quite long, which also applies to a very diverse craft-beer curriculum. Cthulhu on the Moon Black IPA, Compendium Monastic Red IPA and KRUSH! Tropical Pale Ale. Bring it on! We look forward to what they bring from 'down under' to our backyard.
+        moon-dog:
+          text: |
+            Together with Kaiju, Moon Dog Craft Brewery is one of the pioneer new generation of craft-beer brewers of Australia. Bold combinations with exotic results characterize this brewery. The design of their branding is also worth mentioning. Score a few cans for your beer stash, because there will also be a stand with beer for take out. 😋
+        frontaal:
+          text: |
+            Last year these guys were there too and to everyone's pleasure these Brabo's are back! Their name says it all. Frontaal stands for straightforward quality, but no frills. This does not mean that they make boring beers. For example: we are very curious about the American Barleywine that has matured for 4 months in Tennessee bourbon barrels.
       contact:
         title: "Contact"
       extra-info:
