--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -61,6 +61,15 @@
         vandestreek:
           text: |
             De brouwende broers van VandeStreek schuwen nieuwe smaken en technieken niet. Inmiddels hebben ze 7 vaste bieren, aangevuld met elke maand een speciaal-speciaalbiertje, collaborations met andere hop-fanatici en barrel bged bieren uit hun snel groeiende barrel room.
+        kaiju:
+          text: |
+            In 2013 bestormde Kaiju het podium en haalden direct een medaille binnen voor een dubbele IPA. Inmiddels is hun lijst met bekroningen aardig lang, wat tevens geldt voor een zeer divers craft-beer-curriculum. Als we deze even doornemen gaat het hier al aardig watertanden: Cthulhu on the Moon Black IPA, Compendium Monastic Red IPA en KRUSH! Tropical Pale Ale. Kom maar op! We kijken hier uit naar wat ze meenemen van down under naar onze backyard.
+        moon-dog:
+          text: |
+            Behoort samen met Kaiju tot de pioniers van Australië als het aankomt op de nieuwe generatie craft-beer brouwers. Gewaagde combinaties met exotische resultaten kenmerken deze brouwerij. Ook de vormgeving van hun blikken is aardig noemenswaardig. Scoor een paar cans voor je collectie, er komt namelijk ook een stand met bier voor mee naar huis. 😋
+        frontaal:
+          text: |
+            Vorig jaar ook van de partij, en tot ieders genoegen zijn deze Brabo’s weer terug! De naam zegt het al. Frontaal staat voor rechttoe rechtaan; Wel kwaliteit, maar geen fratsen, dat scheelt. Dit betekend niet dat ze saaie biertjes maken. Zo zijn wij hier erg benieuwd naar de American Barleywine die 4 maanden heeft gerijpt op Tennessee bourbon vaten. Om maar wat te noemen.
       contact:
         title: "Contact"
       extra-info:
