--- a/locales/en.yml
+++ b/locales/en.yml
@@ -73,6 +73,9 @@
         frontaal:
           text: |
             Last year these guys were there too and to everyone's pleasure these Brabo's are back! Their name says it all. Frontaal stands for straightforward quality, but no frills. This does not mean that they make boring beers. For example: we are very curious about the American Barleywine that has matured for 4 months in Tennessee bourbon barrels.
+        diggelfjoer:
+          text: |
+            Their beers are based on the well-known Belgian styles and contain no exotic ingredients, but are well thought out and appeal to many beer lovers. For example, their Tripel "Suver Nuver" won the first prize for Best Tripel in 2018 at the beer festival in the Martinikerk. The reason that they called their newest beer (a quadrupel) "Grutsk". In Frisian this means Proud!
       contact:
         title: "Contact"
       extra-info:
