--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -70,6 +70,9 @@
         frontaal:
           text: |
             Vorig jaar ook van de partij, en tot ieders genoegen zijn deze Brabo’s weer terug! De naam zegt het al. Frontaal staat voor rechttoe rechtaan; Wel kwaliteit, maar geen fratsen, dat scheelt. Dit betekend niet dat ze saaie biertjes maken. Zo zijn wij hier erg benieuwd naar de American Barleywine die 4 maanden heeft gerijpt op Tennessee bourbon vaten. Om maar wat te noemen.
+        diggelfjoer:
+          text: |
+            Hun bieren zijn op de bekende Belgische stijlen gebaseerd, bevatten geen exotische ingrediënten maar zijn goed doordacht en spreken veel bierliefhebbers aan. Zo heeft hun Tripel "Suver Nuver" in 2018 de eerste prijs voor Beste en Lekkerste Tripel gewonnen op het bierfestival in de Martinikerk. De reden dat zij hun nieuwste bier (een quadrupel) “Grutsk” hebben genoemd. In het Fries betekent dit Trots! Die wil’n wij hier wel eem kom’n proev’n!
       contact:
         title: "Contact"
       extra-info:
