--- a/locales/en.yml
+++ b/locales/en.yml
@@ -76,6 +76,9 @@
         diggelfjoer:
           text: |
             Their beers are based on the well-known Belgian styles and contain no exotic ingredients, but are well thought out and appeal to many beer lovers. For example, their Tripel "Suver Nuver" won the first prize for Best Tripel in 2018 at the beer festival in the Martinikerk. The reason that they called their newest beer (a quadrupel) "Grutsk". In Frisian this means Proud!
+        de-prael:
+          text: | 
+            New in Staaaaad! Obviously then you should be on the line-up of our Groninger beer festival. At De Prael, they engage in corporate social responsibility with people who are at a distance from the labor market. That is very noble, but the beers must of course be good, and they certainly are. On their C.V., among others, a Bitterblond, Scotch Ale, Barleywine, quadrupel, D.I.P.A., Milkstout and a Dortmunder.
       contact:
         title: "Contact"
       extra-info:
