--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -73,6 +73,9 @@
         diggelfjoer:
           text: |
             Hun bieren zijn op de bekende Belgische stijlen gebaseerd, bevatten geen exotische ingrediënten maar zijn goed doordacht en spreken veel bierliefhebbers aan. Zo heeft hun Tripel "Suver Nuver" in 2018 de eerste prijs voor Beste en Lekkerste Tripel gewonnen op het bierfestival in de Martinikerk. De reden dat zij hun nieuwste bier (een quadrupel) “Grutsk” hebben genoemd. In het Fries betekent dit Trots! Die wil’n wij hier wel eem kom’n proev’n!
+        de-prael:
+          text: |
+            Nieuw in Staaaaad! En dan kan je natuurlijk niet ontbreken op ons Groningse bierfestival. Bij De Prael doen ze aan maatschappelijk verantwoord ondernemen met mensen met afstand tot de arbeidsmarkt, zoals dat dan zo heet. Dat is heel nobel, maar de biertjes moeten natuurlijk wel goed zijn, en dat zijn ze zeker. Op hun C.V. onder andere een Bitterblond, Scotch Ale, Barleywine, quadrupel, D.I.P.A., Milkstout en een Dortmunder.
       contact:
         title: "Contact"
       extra-info:
