--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -76,6 +76,9 @@
         de-prael:
           text: |
             Nieuw in Staaaaad! En dan kan je natuurlijk niet ontbreken op ons Groningse bierfestival. Bij De Prael doen ze aan maatschappelijk verantwoord ondernemen met mensen met afstand tot de arbeidsmarkt, zoals dat dan zo heet. Dat is heel nobel, maar de biertjes moeten natuurlijk wel goed zijn, en dat zijn ze zeker. Op hun C.V. onder andere een Bitterblond, Scotch Ale, Barleywine, quadrupel, D.I.P.A., Milkstout en een Dortmunder.
+        eggens:
+          text: |
+            Zoals oplettenden wellicht al hebben opgemerkt, hebben we bijna geen brouwerijen uit Groningen. Niet uit arrogantie, dat is ons vreemd, maar om de beer-snobs wat te paaien. Voor Eggens hebben we een uitzondering gemaakt. Deze kleine en charmante brouwerij komt wederom met hun tap met verssche biertjes. En om het geheel iets speciaals te geven: ze komen met IETS NIEUWS EN WIJ HEBBEN DE PRIMEUR!!! (Daarover binnenkort meer).
       contact:
         title: "Contact"
       extra-info:
