Add eggens prael diggelfjoer (#34)
* Add Diggelfjoer

* Add de Prael

* Add eggens

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -73,6 +73,15 @@
         frontaal:
           text: |
             Last year these guys were there too and to everyone's pleasure these Brabo's are back! Their name says it all. Frontaal stands for straightforward quality, but no frills. This does not mean that they make boring beers. For example: we are very curious about the American Barleywine that has matured for 4 months in Tennessee bourbon barrels.
+        diggelfjoer:
+          text: |
+            Their beers are based on the well-known Belgian styles and contain no exotic ingredients, but are well thought out and appeal to many beer lovers. For example, their Tripel "Suver Nuver" won the first prize for Best Tripel in 2018 at the beer festival in the Martinikerk. The reason that they called their newest beer (a quadrupel) "Grutsk". In Frisian this means Proud!
+        de-prael:
+          text: |
+            New in Staaaaad! Obviously then you should be on the line-up of our Groninger beer festival. At De Prael, they engage in corporate social responsibility with people who are at a distance from the labor market. That is very noble, but the beers must of course be good, and they certainly are. On their C.V., among others, a Bitterblond, Scotch Ale, Barleywine, quadrupel, D.I.P.A., Milkstout and a Dortmunder.
+        eggens:
+          text: |
+            As observers may have noticed, we have almost no breweries from Groningen on our line-up. Not out of arrogance (arrogance is strange to us), but to spawn the beer snobs. We have made an exception for Eggens. This small and charming brewery comes with their tap with fresh beers. And something special: they come with SOMETHING NEW AND WE HAVE THE FIRST TRY OUT !!! (More on that soon).
       contact:
         title: "Contact"
       extra-info:
