--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -70,6 +70,15 @@
         frontaal:
           text: |
             Vorig jaar ook van de partij, en tot ieders genoegen zijn deze Brabo’s weer terug! De naam zegt het al. Frontaal staat voor rechttoe rechtaan; Wel kwaliteit, maar geen fratsen, dat scheelt. Dit betekend niet dat ze saaie biertjes maken. Zo zijn wij hier erg benieuwd naar de American Barleywine die 4 maanden heeft gerijpt op Tennessee bourbon vaten. Om maar wat te noemen.
+        diggelfjoer:
+          text: |
+            Hun bieren zijn op de bekende Belgische stijlen gebaseerd, bevatten geen exotische ingrediënten maar zijn goed doordacht en spreken veel bierliefhebbers aan. Zo heeft hun Tripel "Suver Nuver" in 2018 de eerste prijs voor Beste en Lekkerste Tripel gewonnen op het bierfestival in de Martinikerk. De reden dat zij hun nieuwste bier (een quadrupel) “Grutsk” hebben genoemd. In het Fries betekent dit Trots! Die wil’n wij hier wel eem kom’n proev’n!
+        de-prael:
+          text: |
+            Nieuw in Staaaaad! En dan kan je natuurlijk niet ontbreken op ons Groningse bierfestival. Bij De Prael doen ze aan maatschappelijk verantwoord ondernemen met mensen met afstand tot de arbeidsmarkt, zoals dat dan zo heet. Dat is heel nobel, maar de biertjes moeten natuurlijk wel goed zijn, en dat zijn ze zeker. Op hun C.V. onder andere een Bitterblond, Scotch Ale, Barleywine, quadrupel, D.I.P.A., Milkstout en een Dortmunder.
+        eggens:
+          text: |
+            Zoals oplettenden wellicht al hebben opgemerkt, hebben we bijna geen brouwerijen uit Groningen. Niet uit arrogantie, dat is ons vreemd, maar om de beer-snobs wat te paaien. Voor Eggens hebben we een uitzondering gemaakt. Deze kleine en charmante brouwerij komt wederom met hun tap met verssche biertjes. En om het geheel iets speciaals te geven: ze komen met IETS NIEUWS EN WIJ HEBBEN DE PRIMEUR!!! (Daarover binnenkort meer).
       contact:
         title: "Contact"
       extra-info:
