--- a/locales/en.yml
+++ b/locales/en.yml
@@ -43,6 +43,9 @@
         volt:
           text: |
             Blues and Beer, a poor man's remedy. Don't get us wrong, this should be a happy day and evening, but a bit of blues is never far away with a good pint in hand. After all, life is a smile and a tear. And is there anything better than a great Chicago Blues band? 10.000 Volt will play classics and own work.
+        lone-wolf:
+          text: |
+            Whahooooooo! LONE WOLF is coming to Hop! Into the Grain! Fresh from their tour through Canada, still covered with wood chips and grizzly-bear-sweat, they are on stage with us. You can also know these rockers from Rotterdam from the bands Accelerators, The Apers and The Bat Bites. Don't you know them? Doesn't matter. Where you can trust on is that they produce a wonderful garage and indie rock sound that goes very well with a beer in hand. Watch out for spilling!
       breweries:
         title: "Breweries"
         more: "More breweries to be announced!"
