--- a/locales/nl.yml
+++ b/locales/nl.yml
@@ -40,6 +40,9 @@
         volt:
           text: |
             Blues and Beer, a poor man’s remedy. Begrijp ons niet verkeerd, dit moet vooral een vrolijke dag en avond worden, maar een beetje blues is nooit ver weg met een goeie pint in de hand. Het leven is immers een lach en een traan. En luistert er iets beters weg dan een fijne Chicago Blues band? Klassiekers en eigen werk passeren de revu.
+        lone-wolf:
+          text: |
+            Whahooooooo! LONE WOLF komt naar Hop! Into the Grain! Vers van hun tour door Canada, nog onder de houtsnippers en grizzly-beer-zweet, staan ze bij ons op het podium. Deze rockers uit Rotterdam kan je ook kennen van de bands Accelerators, The Apers en The Bat Bites. Ken je ze niet? Niet erg. Waar je op kan vertrouwen is dat ze een heerlijke garage- en indierock rock sound neerzetten die zeer goed samen gaat met een biertje in de hand. Pas op voor morsen!
       breweries:
         title: "Brouwerijen"
         more: "Meer brouwerijen to be announced!"
